--- a/templates/apps/club/club.html
+++ b/templates/apps/club/club.html
@@ -104,7 +104,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="search_box_of_club" style="position: relative;">
-                  <div id="myInspector"></div>
+                  <!-- <div id="myInspector"></div> -->
                   <table id="treeTable" class="display">
                     <thead>
                       <tr>
