--- a/templates/includes/main_navbar.html
+++ b/templates/includes/main_navbar.html
@@ -8,8 +8,8 @@
       <li class="navbar__item {% if '/club/' in request.path %} navbar__item__new__background {% endif %}">
         <a href="{% url 'club:club' club_data_pk_initial %}" class="navbar__link"><i data-feather="message-square"></i><span>Messages</span></a>        
       </li>
-      <li class="navbar__item">
-        <a href="#" class="navbar__link"><i data-feather="users"></i><span>Customers</span></a>        
+      <li class="navbar__item {% if '/tracking/' in request.path %} navbar__item__new__background {% endif %}">
+        <a href="{% url 'tracking:tracking' %}" class="navbar__link"><i data-feather="monitor"></i><span>Customers</span></a>        
       </li>
       <li class="navbar__item">
         <a href="#" class="navbar__link"><i data-feather="folder"></i><span>Projects</span></a>        
